@@ -1,5 +1,10 @@
 2013-11-21  Richard Biener  <rguenther@suse.de>
 
+	* tree-ssa-forwprop.c (simplify_vce): New function.
+	(ssa_forward_propagate_and_combine): Call it.
+
+2013-11-21  Richard Biener  <rguenther@suse.de>
+
 	* tree-vect-loop-manip.c (vect_build_loop_niters,
 	vect_generate_tmps_on_preheader): Move ...
 	* tree-vect-loop.c (vect_build_loop_niters,
